=========
Changelog
=========

Here you can find the recent changes to pullv.

0.0.2
-----

11/23/2013
""""""""""

- [tests] Move tests for making directory paths to ``test_repo``
  TestSuite.
- [tests] [git] more work on remotes with :class:`pullv.repo.git.GitRepo`.

11/16/2013
""""""""""

- [tests] refactor tests modules
- [git] add some functions with saltstack to
  :py:class:`pullv.repo.git.GitRepo`.
- [version] reset to 0.1.0 w/o dev tag to begin releases.

0.0.1
-----

11/15/2013
""""""""""

- [cli] [tests] fix `issue #1`_ for making directories recursively.

.. _issue #1: https://github.com/tony/pullv/issues/1

11/14/2013
""""""""""

- [tests] :py:mod:`tempfile`.
- [cli] [config] remove .ini support

11/09/2013
""""""""""

- `pep257`_ to all modules.
- Add `argcomplete`_.

11/09/2013
""""""""""

- Move in code patterns from `tmuxp`_. New logger, setup.py, testsuite
  structure, etc.

10/23/2013
""""""""""

- add example

10/17/2013
""""""""""

- fix packaging issue, add MANIFEST.in
- bump to 0.1.1

10/08/2013
""""""""""

- move to semver

10/06/2013
""""""""""

https://github.com/tony/pullv/compare/a96e723269...a5be723de5

- remove virtualenv dep [Done]
- remove pip dep [Done]
- logging for repo obtain/update/makedir/rev [Done]
- logging.notify with alternative format [Done]
- removed salt-specific code used for Popen
  (https://github.com/tony/pullv/commit/67dbb793e7)

.. _tmuxp: http://tmuxp.rtfd.org
.. _pep257: http://www.python.org/dev/peps/pep-0257/
.. _pep8: http://www.python.org/dev/peps/pep-0008/
.. _sphinx-argparse: https://github.com/tony/sphinx-argparse
.. _argcomplete: https://github.com/kislyuk/argcomplete

.. todo:: vim: set filetype=rst: