@@ -4,6 +4,13 @@ Changelog
 
 Here you can find the recent changes to pullv.
 
+dev
+---
+
+- [cli] - fixed bug where logger would output message twice
+- [`pep257`_] [`pep8`_] [logger] update ``pullv.log`` module to latest
+  code (from `tmuxp`_ project).
+
 0.0.2
 -----
 
